# rollup-plugin-wit-component

./: .gitignore  Cargo.toml  LICENSE  README.md  _bundle-gen.js  _jco.js  _preview2-shim.js  justfile  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: deploy.yml
crates/demo/: Cargo.toml  README.md
crates/demo/src/: bindings.rs  lib.rs
crates/demo/wit/: world.wit
crates/hello/: Cargo.toml  README.md
crates/hello/src/: lib.rs
crates/hello/wit/: world.wit
docs/: index.html
docs/_app/: version.json
docs/_app/immutable/assets/: bindings_wasm_bg.5888c782.wasm  bindings_wasm_bg.AhEWHRn7.wasm  demo.318703a3.wasm  demo.SGpLZQmN.wasm  demo.e2a4f134.wasm  hello.world.comp.54375b0a.wasm  js-component-bindgen-component.core.8d3630b0.wasm  js-component-bindgen-component.core.dJCIGcvV.wasm  js-component-bindgen-component.core2.92e3b214.wasm  js-component-bindgen-component.core2.vGyQq4l7.wasm
docs/_app/immutable/chunks/: entry.P3jVOdEA.js  index.3cb83f07.js  index.7118ea23.js  index.PHqDyT_i.js  index.PKzfIukx.js  index.a50a6ba8.js  index.ab206ff1.js  index.b826fb93.js  index.e8e741d4.js  js-component-bindgen-component.59e1ab36.js  singletons.01e9aa22.js  singletons.1ffe4922.js  singletons.228bc438.js  singletons.4f783eda.js  (+9 more)
src/lib/: index.js  loader.js  plugin.js
src/lib/bindgenComp/: js-component-bindgen-component.d.ts  js-component-bindgen-component.js  wasm-tools.d.ts  wasm-tools.js
src/lib/bundled/: _jco.js
src/routes/: +layout.js  +page.svelte  cargo_comp.wasm  hello.component.wasm  importables.js
(+62 files in other folders)
