[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.17.0", default-features = false, features = ["realloc"] }
chrono = "0.4.33"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:demo"

[package.metadata.component.dependencies]
